--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
 source-file ~/.tmux/color_vim.txt
 
+# remap prefix to Control + a
+set -g prefix C-a
+# bind 'C-a C-a' to type 'C-a'
+bind C-a send-prefix
+unbind C-b
+
 # let g:airline#extensions#tmuxline#enabled = 0
