--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,10 @@ unbind C-b
 # Set a Ctrl-b shortcut for reloading your tmux config
 bind r source-file ~/.tmux.conf
 
+# for vim
+set -g @resurrect-strategy-vim 'session'
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
 
 
 # Rename your terminals
