--- a/redshift/redshift.conf
+++ b/redshift/redshift.conf
@@ -5,7 +5,7 @@
 [redshift]
 ; Set the day and night screen temperatures (Neutral is 6500K)
 temp-day=5700
-temp-night=500
+temp-night=2500
 
 ; Enable/Disable a smooth transition between day and night
 ; 0 will cause a direct change from day to night screen temperature.
@@ -16,8 +16,8 @@ transition=0
 ;brightness=0.9
 ; It is also possible to use different settings for day and night
 ; since version 1.8.
-;brightness-day=0.7
-;brightness-night=0.4
+brightness-day=0.7
+brightness-night=0.7
 ; Set the screen gamma (for all colors, or each color channel
 ; individually)
 gamma=0.8
@@ -45,8 +45,8 @@ adjustment-method=randr
 ; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
 ; are negative numbers.
 [manual]
-lat=48.1
-lon=11.6
+lat=45.0
+lon=-122
 
 ; Configuration of the adjustment-method
 ; type 'redshift -m METHOD:help' to see the settings.
@@ -56,4 +56,4 @@ lon=11.6
 ; second screen. If this option is not specified, Redshift will try
 ; to adjust _all_ screens.
 [randr]
-screen=1
+screen=0
