--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,7 +54,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # https://github.com/tmux-plugins/tmux-resurrect
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
 
