--- a/xfce4/panel/whiskermenu-3.rc
+++ b/xfce4/panel/whiskermenu-3.rc
@@ -1,5 +1,5 @@
 favorites=exo-terminal-emulator.desktop,exo-file-manager.desktop,exo-mail-reader.desktop,exo-web-browser.desktop
-recent=xfce4-taskmanager.desktop,Thunar.desktop,xscreensaver-properties.desktop,org.gnome.Calculator.desktop,org.gnome.Cheese.desktop,nm-connection-editor.desktop,xfce-ui-settings.desktop,dwarffortress.desktop,xfburn.desktop,xfce-mouse-settings.desktop
+recent=Thunar.desktop,xfce4-taskmanager.desktop,xscreensaver-properties.desktop,org.gnome.Calculator.desktop,org.gnome.Cheese.desktop,nm-connection-editor.desktop,xfce-ui-settings.desktop,dwarffortress.desktop,xfburn.desktop,xfce-mouse-settings.desktop
 button-title=Applications
 button-icon=xfce4-whiskermenu
 button-single-row=false
