--- a/polybar/config
+++ b/polybar/config
@@ -44,41 +44,41 @@ tray-padding = 0
 ; https://github.com/jaagr/polybar/issues/317
 [module/bspwm]
 type = internal/bspwm
-format = <label-state> <label-mode>
-index-sort = true
-wrapping-scroll = false
-strip-wsnumbers = true
-pin-workspaces = true
+; format = <label-state> <label-mode>
+; index-sort = true
+; wrapping-scroll = false
+; strip-wsnumbers = true
+; pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = #000
 
 format-label-padding=10
 
-ws-icon-1 = 1;
-ws-icon-2 = 2;
-ws-icon-3 = 3;
-ws-icon-4 = 4;
-ws-icon-5 = 5;
+ws-icon-0 = shell;
+ws-icon-1 = firefox;
+ws-icon-2 = emacs;
+ws-icon-3 = evince;
+ws-icon-4 = etc;
 ws-icon-default = 
 
 ;; https://github.com/galczo5/dotfiles/blob/master/POLYBAR/.polybar
 
 
- label-focused = %icon%
- label-focused-background = #88000000
- label-focused-underline= #ddd
- label-focused-padding = 4
- 
- label-occupied = %icon%
- label-occupied-padding = 4
- 
- label-urgent = %icon%
- label-urgent-padding = 4
- 
- label-empty = %icon%
- label-empty-foreground = #44ffffff
- label-empty-padding = 4
+label-focused = %icon%
+label-focused-background = #88000000
+label-focused-underline= #ddd
+label-focused-padding = 4
+
+label-occupied = %icon%
+label-occupied-padding = 4
+
+label-urgent = %icon%
+label-urgent-padding = 4
+
+label-empty = %icon%
+label-empty-foreground = #44ffffff
+label-empty-padding = 4
 
 [module/xwindow]
 type = internal/xwindow
