--- a/polybar/config
+++ b/polybar/config
@@ -1,12 +1,12 @@
 [bar/top]
 width = 100%
-height = 31
+height = 33
 offset-x = 0
 offset-y = 0
 ;bottom = true
 
 background = #2a000000
-foreground = #eee
+foreground = #fff
 
 
 underline-size = 2
@@ -22,7 +22,7 @@ font-0 = Noto Sans:pixelsize=10;0
 font-1 = FontAwesome:size=10;-2
 font-2 = siji:pixelsize=10;0
 
-modules-left = bspwm
+modules-left = workspaces
 modules-center =
 modules-right = wireless-network battery volume spotify date powermenu
 
@@ -42,44 +42,36 @@ tray-padding = 0
 
 
 ; https://github.com/jaagr/polybar/issues/317
-[module/bspwm]
-type = internal/bspwm
-; format = <label-state> <label-mode>
-; index-sort = true
-; wrapping-scroll = false
-; strip-wsnumbers = true
-; pin-workspaces = true
+[module/workspaces]
+type = internal/xworkspaces
+pin-workspaces = false
+enable-click = true
+enable-scroll = true
+format-padding = 0
 
-label-mode-padding = 2
-label-mode-foreground = #000
+icon-0 = 1;
+icon-1 = 2;
+icon-2 = 3;
+icon-3 = 4;
+icon-4 = 5;
+icon-default =
 
-format-label-padding=10
+format = <label-state>
+label-active = %icon% %name%
+label-occupied = %icon% %name%
+label-urgent = %icon% %name%
+label-empty = %icon% %name%
+label-occupied-padding = 4
+label-empty-padding = 4
+label-urgent-padding = 4
+label-active-padding = 4
 
-ws-icon-0 = I;
-ws-icon-1 = II;
-ws-icon-2 = III;
-ws-icon-3 = IV;
-ws-icon-4 = V;
-ws-icon-default = 
-
-;; https://github.com/galczo5/dotfiles/blob/master/POLYBAR/.polybar
-
-
-label-focused = %icon%
 label-focused-background = #88000000
 label-focused-underline= #ddd
-label-focused-padding = 4
 
-label-occupied = %icon%
-label-occupied-padding = 4
+label-empty-foreground = #ccc
 
-label-urgent = %icon%
-label-urgent-padding = 4
-
-label-empty = %icon%
-label-empty-foreground = #44ffffff
-label-empty-padding = 4
-
+;; https://github.com/galczo5/dotfiles/blob/master/POLYBAR/.polybar
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:120:...%
@@ -114,6 +106,9 @@ format-connected-underline = ${dracula-colors.cyan}
 label-connected = 
 label-disconnected = 
 label-disconnected-foreground = ${dracula-colors.foreground}
+
+[module/wlan]
+label-connected = %{A1:nm-connection-editor:}%essid%%{A}
 
 [module/date]
 type = internal/date
