--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -44,7 +44,7 @@ glx-swap-method = "-1";
 #
 #################################
 
-menu-opacity = 0.8;
+#menu-opacity = 0.8;
 #inactive-opacity = 0.8;
 #active-opacity = 0.8;
 #frame-opacity = 0.8;
