--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,9 @@ set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
 
+# https://superuser.com/questions/429558/how-to-switch-between-two-latest-windows-in-tmux
+bind-key a last-window
+
 # let g:airline#extensions#tmuxline#enabled = 0
 
 
