--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,4 @@
+source-file ~/.tmux/tmux-reset/tmux-reset
 source-file ~/.tmux/color_vim.txt
 
 # remap prefix to Control + a
@@ -35,6 +36,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # https://github.com/tmux-plugins/tmux-resurrect
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '15'
+#set -g status-right 'Continuum status: #{continuum_status}'
+
 
 set -g @plugin 'tmuxinator/tmuxinator'
 
@@ -52,3 +58,84 @@ run '~/.tmux/plugins/tpm/tpm'
 # https://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
 bind-key S-Left swap-window -t -1
 bind-key S-Right swap-window -t +1
+
+####################################
+
+# vi mode
+# https://gist.github.com/tsl0922/d79fc1f8097dde660b34
+# use C-a, since it's on the home row and easier to hit than C-b
+
+# Easy config reload
+bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+
+# vi is good
+setw -g mode-keys vi
+
+# mouse behavior
+set -g mouse on
+# https://stackoverflow.com/questions/36815879/tmux-copy-mouse-selected-text-to-clipboard-automatically-on-mouse-release
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "xclip -in -selection clipboard"
+
+set-option -g default-terminal screen-256color
+
+bind-key : command-prompt
+bind-key r refresh-client
+bind-key L clear-history
+
+#bind-key space next-window
+#bind-key bspace previous-window
+bind-key enter next-layout
+
+# use vim-like keys for splits and windows
+bind-key v split-window -h
+bind-key s split-window -v
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+unbind-key    -T copy-mode-vi MouseDrag1Pane
+unbind-key    -T copy-mode    MouseDrag1Pane
+
+
+# smart pane switching with awareness of vim splits
+# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
+# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
+# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
+# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
+# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+bind C-l send-keys 'C-l'
+
+bind-key C-o rotate-window
+
+bind-key + select-layout main-horizontal
+bind-key = select-layout main-vertical
+set-window-option -g other-pane-height 25
+set-window-option -g other-pane-width 80
+
+#bind-key a last-pane
+bind-key q display-panes
+bind-key c new-window
+bind-key t next-window
+bind-key T previous-window
+
+bind-key [ copy-mode
+bind-key ] paste-buffer
+
+# Setup 'v' to begin selection as in Vim
+#bind -T copy-mode-vi v begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
+
+# Update default binding of `Enter` to also use copy-pipe
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
+
+set-window-option -g display-panes-time 1500
+
+# Allow the arrow key to be used immediately after changing windows
+set-option -g repeat-time 0
+
+# https://stackoverflow.com/questions/28376611/how-to-automatically-rename-tmux-windows-to-the-current-directory
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
