--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -128,66 +128,94 @@ font:
   use_thin_strokes: true
 
 # Should display the render timer
-render_timer: false
+debug.render_timer: false
 
 # Use custom cursor colors. If true, display the cursor in the cursor.foreground
 # and cursor.background colors, otherwise invert the colors of the cursor.
 #custom_cursor_colors: false
-
-# Colors (Tomorrow Night Bright)
+# Colors (Dracula)
 colors:
   # Default colors
   primary:
+    #background: '0x282a36'
     background: '0x000000'
-    foreground: '0xeaeaea'
-
-    # (Optional) Bright and Dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not present.
-    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-    # is `false`, the normal foreground color will be used.
-    #
-    # dim_foreground: '0x9a9a9a'
-    # bright_foreground: '0xffffff'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0x000000'
-    cursor: '0xffffff'
+    foreground: '0xf8f8f2'
 
   # Normal colors
   normal:
     black:   '0x000000'
-    red:     '0xaa0000'
-    green:   '0x00aa00'
-    yellow:  '0xaa5500'
-    blue:    '0x0000aa'
-    magenta: '0xaa00aa'
-    cyan:    '0x00aaaa'
-    white:   '0xffffff'
+    red:     '0xdc143c'
+    green:   '0x50fa7b'
+    yellow:  '0xf1fa8c'
+    blue:    '0x5f5faf'
+    magenta: '0xff79c6'
+    cyan:    '0x8be9fd'
+    white:   '0xbfbfbf'
 
   # Bright colors
   bright:
-    black:   '0x555555'
-    red:     '0xff5555'
-    green:   '0x55ff55'
-    yellow:  '0xffff55'
-    blue:    '0x5555ff'
-    magenta: '0xff55ff'
-    cyan:    '0x55ffff'
-    white:   '0xffffff'
+    black:   '0x575b70'
+    red:     '0xdc143c'
+    green:   '0x5af78e'
+    yellow:  '0xf4f99d'
+    blue:    '0xcaa9fa'
+    magenta: '0xff92d0'
+    cyan:    '0x9aedfe'
+    white:   '0xe6e6e6'
+# Colors (Tomorrow Night Bright)
+#colors:
+  ## Default colors
+  #primary:
+    #background: '0x000000'
+    #foreground: '0xeaeaea'
+
+    ## (Optional) Bright and Dim foreground colors
+    ##
+    ## The dimmed foreground color is calculated automatically if it is not present.
+    ## If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
+    ## is `false`, the normal foreground color will be used.
+    ##
+    ## dim_foreground: '0x9a9a9a'
+    ## bright_foreground: '0xffffff'
+
+  ## Colors the cursor will use if `custom_cursor_colors` is true
+  #cursor:
+    #text: '0x000000'
+    #cursor: '0xffffff'
+
+  ## Normal colors
+  #normal:
+    #black:   '0x000000'
+    #red:     '0xaa0000'
+    #green:   '0x00aa00'
+    #yellow:  '0xaa5500'
+    #blue:    '0x0000aa'
+    #magenta: '0xaa00aa'
+    #cyan:    '0x00aaaa'
+    #white:   '0xffffff'
+
+  ## Bright colors
+  #bright:
+    #black:   '0x555555'
+    #red:     '0xff5555'
+    #green:   '0x55ff55'
+    #yellow:  '0xffff55'
+    #blue:    '0x5555ff'
+    #magenta: '0xff55ff'
+    #cyan:    '0x55ffff'
+    #white:   '0xffffff'
 
 
-  # Dim colors (Optional)
-  dim:
-    black:   '0x333333'
-    red:     '0xf2777a'
-    green:   '0x99cc99'
-    yellow:  '0xffcc66'
-    blue:    '0x6699cc'
-    magenta: '0xcc99cc'
-    cyan:    '0x66cccc'
-    white:   '0xdddddd'
+  ## Dim colors (Optional)
+  #dim:
+    #black:   '0x333333'
+    #red:     '0xf2777a'
+    #green:   '0x99cc99'
+    #yellow:  '0xffcc66'
+    #blue:    '0x6699cc'
+    #magenta: '0xcc99cc'
+    #cyan:    '0x66cccc'
+    #white:   '0xdddddd'
 
 # Visual Bell
 #
