--- a/mutt/config/mailbox.rc
+++ b/mutt/config/mailbox.rc
@@ -31,3 +31,9 @@ set nomark_old
 set sort = 'threads'
 set sort_aux = 'last-date-received'
 
+set spoolfile=+/
+set header_cache=~/.cache/mutt
+
+set sort=threads
+set sort_browser=date
+set sort_aux=reverse-last-date-received
