--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -139,3 +139,4 @@ set-option -g repeat-time 0
 set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
+set -s escape-time 0
