Update emacs init.el.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-source-file ~/.tmux/tmux-reset/tmux-reset
+#source-file ~/.tmux/tmux-reset/tmux-reset
 source-file ~/.tmux/color_vim.txt
 
 # remap prefix to Control + a
