--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -130,6 +130,9 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
 # Update default binding of `Enter` to also use copy-pipe
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
 
+bind-key ! break-pane -d -n _hidden_pane
+bind-key @ join-pane -s $.1
+
 set-window-option -g display-panes-time 1500
 
 # Allow the arrow key to be used immediately after changing windows
