--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -81,7 +81,7 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Menlo # should be "Menlo" or something on macOS.
+    family: monospace # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Regular
 
@@ -241,7 +241,7 @@ visual_bell:
   duration: 0
 
 # Background opacity
-background_opacity: 1.0
+background_opacity: 0.8
 
 # Mouse bindings
 #
