--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -49,7 +49,7 @@ glx-swap-method = "-1";
 #active-opacity = 0.8;
 #frame-opacity = 0.8;
 inactive-opacity-override = false;
-alpha-step = 0.06;
+#alpha-step = 0.06;
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
